[#1] Fix menu icon alignment.

--- a/source/dbootstrap/theme/bootstrap/Menu.styl
+++ b/source/dbootstrap/theme/bootstrap/Menu.styl
@@ -146,3 +146,10 @@
 .bootstrap .dijitMenuSeparatorBottom {
     height: auto;
 }
+
+// Icon
+.bootstrap .dijitMenuItemIcon {
+    // Keep in line with labels
+    line-height: $baseLineHeight * 0.65;
+}
+
